####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = x-avs.desktop x-cut.desktop x-dxf.desktop x-iff.desktop x-jbig.desktop x-koala.desktop x-leaf.desktop x-lif.desktop x-mac.desktop x-msp.desktop x-mtv.desktop x-neo.desktop x-pi1.desktop x-pict.desktop x-pix.desktop x-pxr.desktop x-ras.desktop x-ras.magic x-rawrgb.desktop x-sct.desktop x-sun.desktop x-sun.magic x-utah.desktop x-utah.magic x-wal.desktop x-wbmp.desktop x-xim.desktop x-xwd.desktop x-pi3.desktop ljpeg.desktop x-dicom.desktop x-mdl.desktop 

install-data-local:
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-avs.desktop $(kde_mimedir)/image/x-avs.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-cut.desktop $(kde_mimedir)/image/x-cut.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-dxf.desktop $(kde_mimedir)/image/x-dxf.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-iff.desktop $(kde_mimedir)/image/x-iff.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-jbig.desktop $(kde_mimedir)/image/x-jbig.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-koala.desktop $(kde_mimedir)/image/x-koala.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-leaf.desktop $(kde_mimedir)/image/x-leaf.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-lif.desktop $(kde_mimedir)/image/x-lif.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-mac.desktop $(kde_mimedir)/image/x-mac.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-msp.desktop $(kde_mimedir)/image/x-msp.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-mtv.desktop $(kde_mimedir)/image/x-mtv.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-neo.desktop $(kde_mimedir)/image/x-neo.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-pi1.desktop $(kde_mimedir)/image/x-pi1.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-pict.desktop $(kde_mimedir)/image/x-pict.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-pix.desktop $(kde_mimedir)/image/x-pix.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-pxr.desktop $(kde_mimedir)/image/x-pxr.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-ras.desktop $(kde_mimedir)/image/x-ras.desktop
	$(mkinstalldirs) $(kde_confdir)/magic/
	$(INSTALL_DATA) $(srcdir)/x-ras.magic $(kde_confdir)/magic/x-ras.magic
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-rawrgb.desktop $(kde_mimedir)/image/x-rawrgb.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-sct.desktop $(kde_mimedir)/image/x-sct.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-sun.desktop $(kde_mimedir)/image/x-sun.desktop
	$(mkinstalldirs) $(kde_confdir)/magic/
	$(INSTALL_DATA) $(srcdir)/x-sun.magic $(kde_confdir)/magic/x-sun.magic
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-utah.desktop $(kde_mimedir)/image/x-utah.desktop
	$(mkinstalldirs) $(kde_confdir)/magic/
	$(INSTALL_DATA) $(srcdir)/x-utah.magic $(kde_confdir)/magic/x-utah.magic
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-wal.desktop $(kde_mimedir)/image/x-wal.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-wbmp.desktop $(kde_mimedir)/image/x-wbmp.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-xim.desktop $(kde_mimedir)/image/x-xim.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-xwd.desktop $(kde_mimedir)/image/x-xwd.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-pi3.desktop $(kde_mimedir)/image/x-pi3.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/ljpeg.desktop $(kde_mimedir)/image/ljpeg.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-dicom.desktop $(kde_mimedir)/image/x-dicom.desktop
	$(mkinstalldirs) $(kde_mimedir)/image/
	$(INSTALL_DATA) $(srcdir)/x-mdl.desktop $(kde_mimedir)/image/x-mdl.desktop

uninstall-local:
	-rm -f $(kde_mimedir)/image/x-avs.desktop
	-rm -f $(kde_mimedir)/image/x-cut.desktop
	-rm -f $(kde_mimedir)/image/x-dxf.desktop
	-rm -f $(kde_mimedir)/image/x-iff.desktop
	-rm -f $(kde_mimedir)/image/x-jbig.desktop
	-rm -f $(kde_mimedir)/image/x-koala.desktop
	-rm -f $(kde_mimedir)/image/x-leaf.desktop
	-rm -f $(kde_mimedir)/image/x-lif.desktop
	-rm -f $(kde_mimedir)/image/x-mac.desktop
	-rm -f $(kde_mimedir)/image/x-msp.desktop
	-rm -f $(kde_mimedir)/image/x-mtv.desktop
	-rm -f $(kde_mimedir)/image/x-neo.desktop
	-rm -f $(kde_mimedir)/image/x-pi1.desktop
	-rm -f $(kde_mimedir)/image/x-pict.desktop
	-rm -f $(kde_mimedir)/image/x-pix.desktop
	-rm -f $(kde_mimedir)/image/x-pxr.desktop
	-rm -f $(kde_mimedir)/image/x-ras.desktop
	-rm -f $(kde_confdir)/magic/x-ras.magic
	-rm -f $(kde_mimedir)/image/x-rawrgb.desktop
	-rm -f $(kde_mimedir)/image/x-sct.desktop
	-rm -f $(kde_mimedir)/image/x-sun.desktop
	-rm -f $(kde_confdir)/magic/x-sun.magic
	-rm -f $(kde_mimedir)/image/x-utah.desktop
	-rm -f $(kde_confdir)/magic/x-utah.magic
	-rm -f $(kde_mimedir)/image/x-wal.desktop
	-rm -f $(kde_mimedir)/image/x-wbmp.desktop
	-rm -f $(kde_mimedir)/image/x-xim.desktop
	-rm -f $(kde_mimedir)/image/x-xwd.desktop
	-rm -f $(kde_mimedir)/image/x-pi3.desktop
	-rm -f $(kde_mimedir)/image/ljpeg.desktop
	-rm -f $(kde_mimedir)/image/x-dicom.desktop
	-rm -f $(kde_mimedir)/image/x-mdl.desktop

####### kdevelop will overwrite this part!!! (end)############
