####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsidebar.a

INCLUDES = $(all_includes)

libsidebar_a_METASOURCES = AUTO

libsidebar_a_SOURCES = sq_storagefile.cpp sq_imagebasket.cpp sq_mountviewitem.cpp sq_treeviewitem.cpp sq_threaddirlister.cpp sq_categorybrowsermenu.cpp sq_categoriesview.cpp sq_splitter.cpp sq_rubberband.cpp sq_treeview.cpp sq_multibar.cpp sq_mountview.cpp 


EXTRA_DIST = sq_mountview.cpp sq_mountview.h sq_multibar.cpp sq_multibar.h sq_treeview.cpp sq_treeview.h sq_rubberband.cpp sq_rubberband.h sq_splitter.cpp sq_splitter.h sq_categoriesview.cpp sq_categoriesview.h sq_categorybrowsermenu.cpp sq_categorybrowsermenu.h sq_threaddirlister.cpp sq_threaddirlister.h sq_treeviewitem.h sq_treeviewitem.cpp sq_mountviewitem.cpp sq_mountviewitem.h sq_imagebasket.cpp sq_imagebasket.h sq_storagefile.h sq_storagefile.cpp 

####### kdevelop will overwrite this part!!! (end)############

INCLUDES += -I.. -I../imageedit_overlay -I../imageeedit_dlg
