####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libsidebar.a

## INCLUDES were found outside kdevelop specific part

libsidebar_a_METASOURCES = AUTO

libsidebar_a_SOURCES = sq_treeviewmenu.cpp sq_previewwidget.cpp sq_storagefile.cpp sq_imagebasket.cpp sq_mountviewitem.cpp sq_treeviewitem.cpp sq_threaddirlister.cpp sq_categorybrowsermenu.cpp sq_categoriesview.cpp sq_treeview.cpp sq_multibar.cpp sq_mountview.cpp 


EXTRA_DIST = sq_mountview.cpp sq_mountview.h sq_multibar.cpp sq_multibar.h sq_treeview.cpp sq_treeview.h sq_categoriesview.cpp sq_categoriesview.h sq_categorybrowsermenu.cpp sq_categorybrowsermenu.h sq_threaddirlister.cpp sq_threaddirlister.h sq_treeviewitem.h sq_treeviewitem.cpp sq_mountviewitem.cpp sq_mountviewitem.h sq_imagebasket.cpp sq_imagebasket.h sq_storagefile.h sq_storagefile.cpp sq_previewwidget.cpp sq_previewwidget.h sq_treeviewmenu.cpp sq_treeviewmenu.h 

####### kdevelop will overwrite this part!!! (end)############

INCLUDES = $(all_includes) -I$(srcdir) -I$(top_srcdir)/ksquirrel
