####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = squirrels 

EXTRA_DIST = edit_sample.png reset_value.png resize_toolbutton.png resize_h.png resize_wh.png resize_w.png resize_toolbutton2.png flipH.png flipV.png rotateL.png rotateR.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/edit_sample.png $(kde_datadir)/ksquirrel/images/imageedit/edit_sample.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/reset_value.png $(kde_datadir)/ksquirrel/images/imageedit/reset_value.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_toolbutton.png $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_h.png $(kde_datadir)/ksquirrel/images/imageedit/resize_h.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_wh.png $(kde_datadir)/ksquirrel/images/imageedit/resize_wh.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_w.png $(kde_datadir)/ksquirrel/images/imageedit/resize_w.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_toolbutton2.png $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton2.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/flipH.png $(kde_datadir)/ksquirrel/images/imageedit/flipH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/flipV.png $(kde_datadir)/ksquirrel/images/imageedit/flipV.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/rotateL.png $(kde_datadir)/ksquirrel/images/imageedit/rotateL.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/rotateR.png $(kde_datadir)/ksquirrel/images/imageedit/rotateR.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/edit_sample.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/reset_value.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_h.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_wh.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_w.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton2.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/flipH.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/flipV.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/rotateL.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/rotateR.png

####### kdevelop will overwrite this part!!! (end)############
