####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = reset_value.png resize_toolbutton.png resize_toolbutton2.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/reset_value.png $(kde_datadir)/ksquirrel/images/imageedit/reset_value.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_toolbutton.png $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/
	$(INSTALL_DATA) $(srcdir)/resize_toolbutton2.png $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton2.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/reset_value.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/resize_toolbutton2.png

####### kdevelop will overwrite this part!!! (end)############
