####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = like_builtin.png like_classic.png like_gqview.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/like/
	$(INSTALL_DATA) $(srcdir)/like_builtin.png $(kde_datadir)/ksquirrel/images/like/like_builtin.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/like/
	$(INSTALL_DATA) $(srcdir)/like_classic.png $(kde_datadir)/ksquirrel/images/like/like_classic.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/like/
	$(INSTALL_DATA) $(srcdir)/like_gqview.png $(kde_datadir)/ksquirrel/images/like/like_gqview.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/like/like_builtin.png
	-rm -f $(kde_datadir)/ksquirrel/images/like/like_classic.png
	-rm -f $(kde_datadir)/ksquirrel/images/like/like_gqview.png

####### kdevelop will overwrite this part!!! (end)############
