####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = 116.png 18016.png animate16.png background16.png close16.png first16.png flipH16.png flipV16.png fullscreen16.png last16.png moveDown16.png moveLeft16.png moveRight16.png moveUp16.png next16.png page116.png page216.png page316.png page416.png prev16.png prop16.png quick16.png reset16.png rotateLeft16.png rotateRight16.png statusbar16.png tickmarks16.png toolbar16.png window16.png zoom0.516.png zoom-16.png zoom+16.png zoom16.png zoom216.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/116.png $(kde_datadir)/ksquirrel/images/menu/116.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/18016.png $(kde_datadir)/ksquirrel/images/menu/18016.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/animate16.png $(kde_datadir)/ksquirrel/images/menu/animate16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/background16.png $(kde_datadir)/ksquirrel/images/menu/background16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/close16.png $(kde_datadir)/ksquirrel/images/menu/close16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/first16.png $(kde_datadir)/ksquirrel/images/menu/first16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/flipH16.png $(kde_datadir)/ksquirrel/images/menu/flipH16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/flipV16.png $(kde_datadir)/ksquirrel/images/menu/flipV16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/fullscreen16.png $(kde_datadir)/ksquirrel/images/menu/fullscreen16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/last16.png $(kde_datadir)/ksquirrel/images/menu/last16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/moveDown16.png $(kde_datadir)/ksquirrel/images/menu/moveDown16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/moveLeft16.png $(kde_datadir)/ksquirrel/images/menu/moveLeft16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/moveRight16.png $(kde_datadir)/ksquirrel/images/menu/moveRight16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/moveUp16.png $(kde_datadir)/ksquirrel/images/menu/moveUp16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/next16.png $(kde_datadir)/ksquirrel/images/menu/next16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/page116.png $(kde_datadir)/ksquirrel/images/menu/page116.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/page216.png $(kde_datadir)/ksquirrel/images/menu/page216.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/page316.png $(kde_datadir)/ksquirrel/images/menu/page316.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/page416.png $(kde_datadir)/ksquirrel/images/menu/page416.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/prev16.png $(kde_datadir)/ksquirrel/images/menu/prev16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/prop16.png $(kde_datadir)/ksquirrel/images/menu/prop16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/quick16.png $(kde_datadir)/ksquirrel/images/menu/quick16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/reset16.png $(kde_datadir)/ksquirrel/images/menu/reset16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/rotateLeft16.png $(kde_datadir)/ksquirrel/images/menu/rotateLeft16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/rotateRight16.png $(kde_datadir)/ksquirrel/images/menu/rotateRight16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/statusbar16.png $(kde_datadir)/ksquirrel/images/menu/statusbar16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/tickmarks16.png $(kde_datadir)/ksquirrel/images/menu/tickmarks16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/toolbar16.png $(kde_datadir)/ksquirrel/images/menu/toolbar16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/window16.png $(kde_datadir)/ksquirrel/images/menu/window16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/zoom0.516.png $(kde_datadir)/ksquirrel/images/menu/zoom0.516.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/zoom-16.png $(kde_datadir)/ksquirrel/images/menu/zoom-16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/zoom+16.png $(kde_datadir)/ksquirrel/images/menu/zoom+16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/zoom16.png $(kde_datadir)/ksquirrel/images/menu/zoom16.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/menu/
	$(INSTALL_DATA) $(srcdir)/zoom216.png $(kde_datadir)/ksquirrel/images/menu/zoom216.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/menu/116.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/18016.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/animate16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/background16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/close16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/first16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/flipH16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/flipV16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/fullscreen16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/last16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/moveDown16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/moveLeft16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/moveRight16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/moveUp16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/next16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/page116.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/page216.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/page316.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/page416.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/prev16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/prop16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/quick16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/reset16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/rotateLeft16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/rotateRight16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/statusbar16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/tickmarks16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/toolbar16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/window16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/zoom0.516.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/zoom-16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/zoom+16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/zoom16.png
	-rm -f $(kde_datadir)/ksquirrel/images/menu/zoom216.png

####### kdevelop will overwrite this part!!! (end)############
