####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = close.png file_first.png file_last.png file_next.png file_prev.png flipH.png flipV.png rotateL.png rotateR.png zoom-.png zoom+.png fullscreen.png ifless.png images.png prop.png reload.png slideshow.png zoom100.png zoomH.png zoom_template.png zoomWH.png zoomW.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/close.png $(kde_datadir)/ksquirrel/images/actions/close.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_first.png $(kde_datadir)/ksquirrel/images/actions/file_first.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_last.png $(kde_datadir)/ksquirrel/images/actions/file_last.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_next.png $(kde_datadir)/ksquirrel/images/actions/file_next.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/file_prev.png $(kde_datadir)/ksquirrel/images/actions/file_prev.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/flipH.png $(kde_datadir)/ksquirrel/images/actions/flipH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/flipV.png $(kde_datadir)/ksquirrel/images/actions/flipV.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/rotateL.png $(kde_datadir)/ksquirrel/images/actions/rotateL.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/rotateR.png $(kde_datadir)/ksquirrel/images/actions/rotateR.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom-.png $(kde_datadir)/ksquirrel/images/actions/zoom-.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom+.png $(kde_datadir)/ksquirrel/images/actions/zoom+.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/fullscreen.png $(kde_datadir)/ksquirrel/images/actions/fullscreen.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/ifless.png $(kde_datadir)/ksquirrel/images/actions/ifless.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/images.png $(kde_datadir)/ksquirrel/images/actions/images.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/prop.png $(kde_datadir)/ksquirrel/images/actions/prop.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/reload.png $(kde_datadir)/ksquirrel/images/actions/reload.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/slideshow.png $(kde_datadir)/ksquirrel/images/actions/slideshow.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom100.png $(kde_datadir)/ksquirrel/images/actions/zoom100.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomH.png $(kde_datadir)/ksquirrel/images/actions/zoomH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoom_template.png $(kde_datadir)/ksquirrel/images/actions/zoom_template.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomWH.png $(kde_datadir)/ksquirrel/images/actions/zoomWH.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/actions/
	$(INSTALL_DATA) $(srcdir)/zoomW.png $(kde_datadir)/ksquirrel/images/actions/zoomW.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/actions/close.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_first.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_last.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_next.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/file_prev.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/flipH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/flipV.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/rotateL.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/rotateR.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom-.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom+.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/fullscreen.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/ifless.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/images.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/prop.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/reload.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/slideshow.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom100.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoom_template.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomWH.png
	-rm -f $(kde_datadir)/ksquirrel/images/actions/zoomW.png

####### kdevelop will overwrite this part!!! (end)############
