####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = squirrel_resize.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/squirrels/
	$(INSTALL_DATA) $(srcdir)/squirrel_resize.png $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_resize.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_resize.png

####### kdevelop will overwrite this part!!! (end)############
