####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = squirrel_resize.png squirrel_filter.png squirrel_colorize.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/squirrels/
	$(INSTALL_DATA) $(srcdir)/squirrel_resize.png $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_resize.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/squirrels/
	$(INSTALL_DATA) $(srcdir)/squirrel_filter.png $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_filter.png
	$(mkinstalldirs) $(kde_datadir)/ksquirrel/images/imageedit/squirrels/
	$(INSTALL_DATA) $(srcdir)/squirrel_colorize.png $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_colorize.png

uninstall-local:
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_resize.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_filter.png
	-rm -f $(kde_datadir)/ksquirrel/images/imageedit/squirrels/squirrel_colorize.png

####### kdevelop will overwrite this part!!! (end)############
